# rust-discid-sys

./: .build.yml  CHANGES.md  Cargo.toml  README.md  discid.h
.github/workflows/: build.yml
examples/: readdisc.rs
src/: lib.rs
