[package]
name = "discid-sys"
version = "0.4.0"
authors = ["Philipp Wolfer <ph.wolfer@gmail.com>"]
edition = "2018"
description = "Unsafe FFI bindings for MusicBrainz libdiscid"
repository = "https://git.sr.ht/~phw/rust-discid-sys"
readme = "README.md"
keywords = ["musicbrainz", "discid", "audio", "bindings", "ffi"]
categories = ["external-ffi-bindings"]
license = "LGPL-3.0-or-later"

[dependencies]

[build-dependencies]
bindgen = "^0.63.0"
